# fpc-ml-dsa-contract

./: .gitignore  CMakeLists.txt  Makefile  README.md  b64.cpp  b64.h  ml_dsa_cc.cpp  tdue.cpp  tdue.h  test.sh  verification.cpp  verification.h
client_app/: dilithium.go  dummy_sig.txt  dummy_sig2.txt  dummy_sig_err.txt  dummy_sig_err2.txt  ml_dsa.go  tdue_b0prime.txt  tdue_keyswitchmat.txt  tdue_new_ciphertext.txt  tdue_old_ciphertext.txt
client_app/sig_txts/: sig_corruptmsg_44.txt  sig_corruptpk_44.txt  sig_corruptsig_44.txt  sig_good_44.txt  sig_good_87.txt
client_app/tdue_txts/: tdue_b0prime.txt  tdue_keyswitchmat.txt  tdue_new_ciphertext.txt  tdue_old_ciphertext.txt  tdue_token.txt
custom_sign/: sign.c
qol_scripts/: dev-container.sh  dev-container2.sh  fpc-bash-script
randombytes/: randombytes.c
test/: Makefile  test.sh  test_hex_utils.cpp
utils/: hexutils.cpp  hexutils.h
